--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -40,6 +40,8 @@
     ]
   },
   "devDependencies": {
+    "parcel": "^2.9.3",
+    "process": "^0.11.10",
     "tailwindcss": "^3.3.3"
   }
 }
